2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Sync with https://foundry.supelec.fr/svn/luatex/trunk/source/
	                  texk/web2c/luatexdir/ r5092.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c: Avoid MinGW64 warnings (INVALID_SOCKET => -1).

2014-11-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c: Indentation.

2014-10-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.[ch] [W32TEX]: Handle DLLPROC as for TeX & Co.
	* am/luatex.am: Define LuajitTeX.

2014-10-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.[ch]: More sync with ../texmfmp.h and ../lib/texmfmp.c.

2014-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c: Apply some code from W32TeX.

2014-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c: Sync with some recent changes in ../lib/texmfmp.c
	(and luatexfirst.c from W32TeX).

2014-09-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/luatex.am: Factor out common *_LDADD and *_DEPENDENCIES.

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/writepng.w: Avoid PNG warnings.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/epdf.h, lua/lepdflib.cc: Use code for poppler >= 0.25
	with <StructTreeRoot.h> or code for poppler <= 0.24 without.
	* fake/StructTreeRoot.h (removed): Obsolete.
	* am/libluatex.am: Adapted.

2014-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luasocket/src/wsocket.h: Avoid redefinition of _WIN32_WINNT.

2014-07-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libluatex.am: Compiling liblua(jit)tex.a requires mplib.h;
	add libmplib.a as dependency.

2014-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libluatex.am: Remove ../mplibdir/lmplib.c from sources and
	dependency on libmplib.a.
	* am/luatex.am: Add ../mplibdir/lmplib.c to sources, dependency
	on libmplib.a, and -DpdfTeX to CPPFLAGS.

	* am/luatex.am: Adapt to MetaPost 1.999 (libgmp and libmpfr).

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
